--- a/indexx.html
+++ b/indexx.html
@@ -89,7 +89,7 @@
   }
   .nav{display:flex;flex-direction:column;gap:8px}
   .nav button{
-    text-align:left;padding:8px 10px;border-radius:8px;border:0;background:transparent;color:var(--muted);
+    text-align:left;padding:12px 10px;border-radius:8px;border:0;background:transparent;color:var(--muted);
     cursor:pointer;font-weight:600;
   }
   .nav button.active{background:linear-gradient(90deg, rgba(37,99,235,0.06), rgba(16,185,129,0.03));color:var(--accent)}
@@ -107,17 +107,16 @@
   .poll{display:grid;gap:10px}
   .poll .options{display:flex;flex-direction:column;gap:8px}
   .option{
-    border-radius:10px;padding:10px;border:1px solid rgba(0,0,0,0.06);background:transparent;display:flex;justify-content:space-between;align-items:center;
+    border-radius:10px;padding:12px;border:1px solid rgba(0,0,0,0.06);background:transparent;display:flex;justify-content:space-between;align-items:center;
   }
-  .option button{background:var(--accent);color:white;border:0;padding:8px 12px;border-radius:8px;cursor:pointer}
+  .option button{background:var(--accent);color:white;border:0;padding:12px 12px;border-radius:8px;cursor:pointer}
 
   .results{display:flex;flex-direction:column;gap:8px;margin-top:8px}
 
   .comments{display:flex;flex-direction:column;gap:8px}
-  .comment-box textarea{width:100%;min-height:70px;padding:10px;border-radius:10px;border:1px solid rgba(0,0,0,0.06);background:transparent;color:inherit}
+  .comment-box textarea{width:100%;min-height:70px;padding:12px;border-radius:10px;border:1px solid rgba(0,0,0,0.06);background:transparent;color:inherit}
   .comment-list{display:flex;flex-direction:column;gap:8px}
   .comment{background:linear-gradient(180deg,transparent,transparent);padding:10px;border-radius:10px;border:1px solid rgba(0,0,0,0.04)}
-
   .spark{height:36px;width:100%;display:block}
 
   @media (max-width:980px){
@@ -131,14 +130,14 @@
   }
 
   .row{display:flex;gap:12px;align-items:center}
-  .pill{padding:6px 10px;border-radius:999px;font-size:13px;background:rgba(0,0,0,0.04)}
-  .btn{background:var(--accent);color:white;border:0;padding:8px 12px;border-radius:8px;cursor:pointer;font-weight:600}
+  .pill{padding:12px 10px;border-radius:999px;font-size:13px;background:rgba(0,0,0,0.04)}
+  .btn{background:var(--accent);color:white;border:0;padding:12px 12px;border-radius:8px;cursor:pointer;font-weight:600}
 
   button:focus, input:focus, textarea:focus {outline:3px solid rgba(59,130,246,0.14);outline-offset:2px}
   .canvas-wrap{height:220px;display:flex;align-items:center}
   canvas{width:100%;height:100%;display:block;border-radius:6px}
   .toggle{
-    display:inline-flex;align-items:center;gap:8px;background:transparent;border-radius:999px;padding:6px;
+    display:inline-flex;align-items:center;gap:8px;background:transparent;border-radius:999px;padding:12px;
   }
   .switch{
     width:44px;height:24px;border-radius:999px;background:#e6eef8;position:relative;cursor:pointer;
@@ -147,6 +146,24 @@
   .switch .knob{position:absolute;top:3px;left:3px;width:18px;height:18px;border-radius:50%;background:white;transition:left .18s ease}
   .switch.on .knob{left:23px}
   .small-muted{font-size:13px;color:var(--muted)}
+.btn-reset {
+  background: var(--danger);
+  color: white;
+  border: none;
+  padding: 6px 10px;        
+  border-radius: 6px;       
+  font-size: 13px;           
+  font-weight: 600;
+  cursor: pointer;
+  transition: background 0.2s ease;
+  margin-left: 8px;         
+}
+
+.btn-reset:hover {
+  background: #dc2626;      
+}
+
+
 </style>
 </head>
 <body>
@@ -154,6 +171,7 @@
     <header>
       <div class="brand">
         <div class="logo" aria-hidden="true">FC</div>
+        <button class="btn-reset" id="reset-btn">Reset</button>
         <div>
           <h1>FanConnect</h1>
           <div class="sub">Engage with your team • Polls • Live simulator • Canvas charts</div>
@@ -210,7 +228,7 @@
     </aside>
 
     <main>
-      <section class="grid" aria-label="Key metrics">
+      <section class="grid" aria-label="Key metrics" style="margin-bottom:32px">
         <div class="card">
           <h3>Fan Activity</h3>
           <div class="muted small">Recent engagement</div>
@@ -285,9 +303,9 @@ const DEFAULTS = {
   ],
   polls: [
     { id: 'p1', question: "Who should take the penalty vs Rival United?", options: [
-      { id: 'o1', label: "A. Captain (No.7)", votes: 14 },
-      { id: 'o2', label: "B. Striker (No.9)", votes: 26 },
-      { id: 'o3', label: "C. Midfielder (No.10)", votes: 6 }
+      { id: 'o1', label: "A. Captain (No.7)", votes: 0 },
+      { id: 'o2', label: "B. Striker (No.9)", votes: 0 },
+      { id: 'o3', label: "C. Midfielder (No.10)", votes: 0 }
     ], created: Date.now() - 1000*60*60*36 }
   ],
   comments: [
@@ -423,18 +441,41 @@ function renderComments(filter=''){
   container.innerHTML = '';
   const f = filter.trim().toLowerCase();
   const shown = list.filter(c => !f || (c.name + ' ' + c.text).toLowerCase().includes(f));
+
   if(shown.length===0){
-    const el = document.createElement('div'); el.className='muted small'; el.textContent='No comments yet. Be the first!';
-    container.appendChild(el); return;
+    const el = document.createElement('div');
+    el.className='muted small';
+    el.textContent='No comments yet. Be the first!';
+    container.appendChild(el);
+    return;
   }
+
   shown.forEach(c=>{
-    const node = document.createElement('div'); node.className='comment';
+    const node = document.createElement('div');
+    node.className='comment';
     node.innerHTML = `
-      <div class="meta"><strong>${escapeHtml(c.name || 'Fan')}</strong> • <span class="small-muted">${timeAgo(c.time)}</span></div>
-      <div>${escapeHtml(c.text)}</div>`;
+      <div class="meta">
+        <strong>${escapeHtml(c.name || 'Fan')}</strong>
+        • <span class="small-muted">${timeAgo(c.time)}</span>
+        <button style="float:right;background:none;border:0;color:var(--danger);cursor:pointer;font-size:12px" onclick="deleteComment('${c.id}')">
+          Delete
+        </button>
+      </div>
+      <div>${escapeHtml(c.text)}</div>
+    `;
     container.appendChild(node);
   });
 }
+function deleteComment(commentId){
+  if(!confirm('Are you sure you want to delete this comment?')) return;
+  let comments = getComments();
+  comments = comments.filter(c => c.id !== commentId);
+  saveComments(comments);
+  renderComments();
+  refreshHeaderCounts();
+  renderDashboardSparks();
+}
+
 document.getElementById('post-comment').addEventListener('click', ()=>{
   const txt = document.getElementById('comment-text');
   const value = txt.value.trim();
@@ -482,18 +523,15 @@ document.querySelectorAll('.nav button').forEach(btn=>{
 function renderDashboardSparks(){
   const polls = getPolls();
   const comments = getComments();
-  const votes = polls.reduce((s,p)=> s + p.options.reduce((a,o)=>a+o.votes,0),0);
-  const base = Math.max(4, Math.round(votes/7));
-  const series = [];
-  for(let i=6;i>=0;i--){
-    const v = Math.max(0, base + Math.round(Math.sin(i/2)*3) + (Math.random()*4-2));
-    series.push(Math.round(v + (comments.length/7)));
-  }
-  const svg = document.getElementById('spark-activity');
-  drawSpark(svg, series);
-  const recent = series.reduce((a,b)=>a+b,0);
-  document.getElementById('metric-activity').textContent = recent;
+  const votes = polls.reduce((s,p)=> s + p.options.reduce((a,o)=>a+o.votes,0), 0);
+
+  const activity = votes + comments.length * 2;
+  document.getElementById('metric-activity').textContent = activity;
+
+  drawSpark(document.getElementById('spark-activity'), [activity]);
 }
+
+
 function drawSpark(svgEl, series){
   const w = 100, h = 30;
   svgEl.setAttribute('viewBox', `0 0 ${w} ${h}`);
@@ -559,52 +597,69 @@ function animateBarsTo(newBars){
 
 function drawCanvasFrame(ts){
   if(!canvas) return;
+
   resizeCanvasToDisplay(canvas);
-  const w = canvas.clientWidth;
-  const h = canvas.clientHeight;
+
+  const dpr = window.devicePixelRatio || 1;
+  const w = canvas.clientWidth * dpr;
+  const h = canvas.clientHeight * dpr;
+
   ctx.clearRect(0,0,w,h);
+
   const now = ts || performance.now();
   const dt = Math.min(50, now - (canvasState.lastDraw || now));
   canvasState.lastDraw = now;
-  const duration = 600; // ms
+
+  const duration = 500;
   canvasState.animProgress = Math.min(1, canvasState.animProgress + dt / duration);
-  const padding = 12;
-  const barHeight = 28;
-  const gap = 12;
-  const leftLabelWidth = 180;
-  const chartX = padding + leftLabelWidth;
-  const chartW = (canvas.clientWidth - chartX - padding);
-  let y = padding;
+
+  const paddingX = 40;
+  const paddingY = 20;
+  const barHeight = 24;
+  const gap = 20;
+  const labelWidth = w * 0.30;  
+  const chartX = paddingX + labelWidth;
+  const chartW = w - chartX - paddingX;
+
+  let y = paddingY;
+
+  ctx.font = `${14*dpr}px Inter, system-ui`;
+  ctx.textBaseline = "middle";
+
   canvasState.bars.forEach(b=>{
     const t = easeOutCubic(canvasState.animProgress);
     b.currentPct = b.fromPct + (b.toPct - b.fromPct) * t;
-    const trackX = chartX;
-    const trackY = y + (barHeight - 16)/2;
-    const trackH = 16;
-    ctx.font = '13px system-ui, Inter, Arial';
-    ctx.fillStyle = getComputedStyle(document.documentElement).getPropertyValue('--muted').trim() || '#6b7280';
-    ctx.textBaseline = 'middle';
-    const label = b.label;
-    wrapTextLeft(ctx, label, padding+6, y + barHeight/2, leftLabelWidth - 12, 1);
-    ctx.fillStyle = (getComputedStyle(document.documentElement).getPropertyValue('--glass')) || '#eef6ff';
-    roundRect(ctx, trackX, trackY, chartW, trackH, 999, true, false);
-    const fillW = Math.max(2, (b.currentPct/100) * chartW);
+    ctx.fillStyle = getComputedStyle(document.documentElement)
+      .getPropertyValue('--muted')
+      .trim() || "#6b7280";
+
+    const labelY = y + barHeight/2;
+    drawWrappedText(b.label, paddingX, labelY, labelWidth - 10);
+    const trackY = y;
+    ctx.fillStyle = "rgba(0,0,0,0.07)";
+    roundRect(ctx, chartX, trackY, chartW, barHeight, 6, true, false);
+    const fill = Math.max(4, chartW * (b.currentPct/100));
     ctx.fillStyle = b.color;
-    roundRect(ctx, trackX+1, trackY+1, fillW-2, trackH-2, 999, true, false);
-    ctx.font = '12px system-ui, Inter, Arial';
-    ctx.fillStyle = getComputedStyle(document.documentElement).getPropertyValue('--muted').trim() || '#6b7280';
-    const votesText = String(b.votes);
-    ctx.textAlign = 'right';
-    ctx.fillText(votesText, trackX + chartW - 6, y + barHeight/2);
+    roundRect(ctx, chartX, trackY, fill, barHeight, 6, true, false);
+    ctx.fillStyle = "#ffffff";
+    ctx.font = `${13*dpr}px Inter, system-ui`;
+    ctx.textAlign = "right";
+    ctx.fillText(
+      b.votes.toString(),
+      chartX + fill - 8*dpr,
+      labelY
+    );
 
     y += barHeight + gap;
   });
+
   if(canvasState.animProgress < 1){
     canvasAnimationFrame = requestAnimationFrame(drawCanvasFrame);
   } else {
     canvasAnimationFrame = null;
   }
 }
+
 function requestCanvasFrame(){
   if(canvasAnimationFrame == null) canvasAnimationFrame = requestAnimationFrame(drawCanvasFrame);
 }
@@ -635,6 +690,12 @@ function wrapTextLeft(ctx, text, x, y, maxWidth, maxLines){
   const truncated = text.length > 40 ? text.slice(0,40) + '...' : text;
   ctx.fillText(truncated, x, y);
 }
+function drawWrappedText(text, x, y, maxWidth){
+  const trimmed = text.length > 28 ? text.slice(0,28)+"…" : text;
+  ctx.textAlign = "left";
+  ctx.fillText(trimmed, x, y);
+}
+
 function easeOutCubic(t){ return 1 - Math.pow(1 - t, 3); }
 function getTopOption(poll){
   return poll.options.slice().sort((a,b)=>b.votes-a.votes)[0] || {label: '-'};
@@ -673,8 +734,10 @@ function scheduleNextSimTick(){
     const idx = Math.floor(Math.random() * poll.options.length);
     poll.options[idx].votes = (poll.options[idx].votes || 0) + 1;
     savePolls(polls);
-    renderPoll(); renderComments(); renderDashboardSparks(); refreshHeaderCounts();
-    scheduleNextSimTick();
+    renderPoll();
+    renderComments();
+    refreshHeaderCounts();
+    renderDashboardSparks();
   }, delay);
 }
 if(getSimState() === 'on') startSimulator();
@@ -722,6 +785,26 @@ if(getPolls().length===0){
 window.addEventListener('beforeunload', ()=>{
   if(simTimer) clearTimeout(simTimer);
   if(canvasAnimationFrame) cancelAnimationFrame(canvasAnimationFrame);
+});
+document.getElementById("reset-btn").addEventListener("click", () => {
+  if (!confirm("Reset all data? This cannot be undone.")) return;
+
+  localStorage.setItem(KEY.updates, JSON.stringify(DEFAULTS.updates));
+  localStorage.setItem(KEY.polls, JSON.stringify(DEFAULTS.polls));
+  localStorage.setItem(KEY.comments, JSON.stringify(DEFAULTS.comments));
+ 
+  renderUpdates();
+  renderPoll();
+  renderComments();
+  renderDashboardSparks();
+  refreshHeaderCounts();
+
+  canvasState = { bars: [], animProgress: 0, lastDraw: 0 };
+  const w = canvas.clientWidth;
+  const h = canvas.clientHeight;
+  ctx.clearRect(0, 0, w, h);
+
+  alert("FanConnect has been reset to default data.");
 });
 </script>
 </body>
